--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 streamlit
-pytesseract
 pandas
-pyttsx3
+pytesseract
+gTTS
 PyMuPDF
 pdf2image
 fuzzywuzzy
+python-Levenshtein
 googletrans==4.0.0-rc1
 Pillow
-streamlit-webrtc
-speechrecognition
-numpy
 yagmail
-gTTS
+streamlit-webrtc
+SpeechRecognition
+av
+numpy
+fpdf
